Improve tests coverage